[package]
name = "hedera"
publish = false
version = "0.0.0"
edition = "2018"
authors = [
    "LaunchBadge <contact@launchbadge.com>"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
hedera = { git = "https://github.com/hashgraph/hedera-sdk-rust", rev = "63340b454d72606930143b4a2faaf2aa33bb95e5" }
pyo3 = { version = "0.5.2", features = [ "extension-module" ] }
chrono = "0.4.6"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
