[package]
name = "hedera"
publish = false
version = "0.1.0-alpha.0"
edition = "2018"
authors = [
    "LaunchBadge <contact@launchbadge.com>"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
#hedera = "0.4.1"
hedera = { path = "/home/user/Development/Dependencies/hedera-sdk-rust" }
pyo3 = { version = "0.6.0-alpha.1", features = [ "extension-module" ] }
chrono = "0.4.6"
itertools = "0.8.0"
derive_more = "0.13.0"
mashup = "0.1.9"
try_from = "0.3.2"
failure = "0.1.5"
sha3 = "0.8.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
